--- a/demo/src/main/res/values/strings.xml
+++ b/demo/src/main/res/values/strings.xml
@@ -8,8 +8,9 @@
     <string name="duration">DURATION</string>
     <string name="animate_menu">ANIM MENU</string>
     <string name="animate_arrow">ANIM ARROW</string>
-    <string name="animate_check">ANIM CHECK</string>
     <string name="animate_x">ANIM X</string>
+    <string name="animate_check">ANIM CHECK</string>
+    <string name="animate_hide">ANIM HIDE</string>
     <string name="set_menu">SET MENU</string>
     <string name="set_arrow">SET ARROW</string>
     <string name="set_x">SET X</string>
